Fix price graphs not stacking on small displays

--- a/Project/src/app/components/numismatics/view-coin/view-coin.component.scss
+++ b/Project/src/app/components/numismatics/view-coin/view-coin.component.scss
@@ -1,3 +1,7 @@
 div {
   color: #282828;
 }
+
+.chart-column {
+  min-width: 500px;
+}
